expandafter seemingly easier to implement than expected!